make sure login form fields stretch across

--- a/app/assets/stylesheets/elements/feeds.scss
+++ b/app/assets/stylesheets/elements/feeds.scss
@@ -64,7 +64,7 @@ ul.feed {
 
     textarea {
       font-size: 17px;
-      max-width: 100%;
+      width: 100%;
     }
 
     &.inactive {
